[gd_scene load_steps=2 format=3 uid="uid://bylqb04nexnr4"]

[ext_resource type="Script" path="res://scripts/battle_menu.gd" id="1_3csry"]

[node name="BattleMenu" type="VBoxContainer"]
custom_minimum_size = Vector2(86, 180)
theme_override_constants/separation = 3
script = ExtResource("1_3csry")

[node name="Attack" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Button" type="Button" parent="Attack"]
layout_mode = 2
theme_override_constants/outline_size = 5
text = "Attack"

[node name="Item" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Button" type="Button" parent="Item"]
layout_mode = 2
theme_override_constants/outline_size = 5
text = "Use Item"

[node name="Run" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Button" type="Button" parent="Run"]
layout_mode = 2
theme_override_constants/outline_size = 5
text = "Run!"

[connection signal="pressed" from="Attack/Button" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="Item/Button" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="Run/Button" to="." method="_on_run_button_pressed"]
